To Do List : CSS
색조합 공부하자 ✏️

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                     <span class="item__name">Study !📒</span>
                     <button class="item__delete"><i class="fa-solid fa-trash-can"></i></button>
                 </div>
+                <div class="item__divider"></div> 
+                <!-- 구분선divider -->
             </li>
         </ul>
         <footer class="footer">
