--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </li>
         </ul>
         <footer class="footer">
-            <input type="text" class="footer__infut">
+            <input type="text" class="footer__input">
             <button class="footer__button">
                 <i class="fa-solid fa-plus"></i>
             </button>
